--- a/Proyecto Calculadora/Base.lproj/Main.storyboard
+++ b/Proyecto Calculadora/Base.lproj/Main.storyboard
@@ -328,6 +328,9 @@
                                                         <buttonConfiguration key="configuration" style="plain" title=".">
                                                             <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="35"/>
                                                         </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="numberDecimalAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7jG-Ba-jXD"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rd5-kL-TnW" userLabel="Operator Result">
                                                         <rect key="frame" x="98.5" y="0.0" width="78.5" height="78.5"/>
